--- a/src/styles/main-nav.less
+++ b/src/styles/main-nav.less
@@ -31,7 +31,7 @@
 	.ribbon {
 		color: @white;
 		background-color: @local_feature_colour;
-		padding: 15px;
+		padding: 10px;
 		line-height: 1.4em;
 
 		div { padding-bottom: 5px; }
@@ -46,6 +46,13 @@
 	.buttonPadding {
 		width: 100%;
 		margin-top: 10px;
+
+		.button {
+			width: 44%;
+		}
+		.button a {
+			padding: 7px 0;
+		}
 	}
 
 	.navSeparator {
