--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -55,12 +55,7 @@ a {
 	}
 }
 .help_button {
-	border: solid 1px white;
-	-webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
-	-moz-box-shadow:    1px 1px 2px 0px rgba(50, 50, 50, 0.75);
-	box-shadow:         1px 1px 2px 0px rgba(50, 50, 50, 0.75);
-	background-color: gray;
-	border-radius: 50%;
+	border-radius: 100%;
 	width: 1.8em;
 	height: 1.8em;
 	float: right;
@@ -95,8 +90,8 @@ a {
 	box-shadow:         1px 1px 5px 0px rgba(50, 50, 50, 0.15);
 }
 .module > h2.center { text-align: center; margin-bottom: 10px; }
-//.module > h3 { margin-bottom: 15px; margin-top: 15px;}
-.module .example .title { border-bottom: inset 1px gray; margin-bottom: 15px;  padding-left: 10px;}
+
+.module > .example > .title { border-bottom: inset 1px gray; margin-bottom: 15px;  padding-left: 10px;}
 .module .example {
 	box-sizing: border-box;
 	border-radius: 5px;
