--- a/src/styles/ticket.less
+++ b/src/styles/ticket.less
@@ -47,6 +47,7 @@
 	}
 
 	.calc button {
+		border: none;
 		background-color: @local_primary_colour;
 		color: @local_secondary_colour_dark;
 		font-weight: normal;
