--- a/src/styles/time.less
+++ b/src/styles/time.less
@@ -1,4 +1,4 @@
 .time {
-	color: @primary_colour_dark;
-	font-size: 12px;
+	color: @supplementary_colour_dark;
+	.small;
 }
